@@ -86,6 +86,8 @@ def register():
         Many2ManySize,
         Many2ManySizeTarget,
         Many2ManySizeRelation,
+        Many2ManyTree,
+        Many2ManyTreeRelation,
         Reference,
         ReferenceTarget,
         ReferenceRequired,
@@ -160,6 +162,8 @@ def register():
         Many2OneDomainValidation,
         Many2OneOrderBy,
         Many2OneSearch,
+        Many2OneTree,
+        Many2OneMPTT,
         TestHistory,
         TestHistoryLine,
         FieldContextChild,
